  base library.
- PS: Added support for Mollie payment fees on the Acumulus invoice status tab.

Bugs:
- ALL: Completors should complete not overwrite values already set.
- JOO|WP: CMS version not mentioned in <connector> tag in messages to the Acumulus API.
- JOO: Mails were not sent as HTML mails but as text mails with HTML tags.

Refactorings:
- ALL: Generalise class totals towards a class Amount (split into part amount and part
  VAT) allowing to retrieve its separate parts and which parts were calculated.
- PS: extracted payment fee handling into a separate class that adds support for 3rd
  party modules.


8.6.4 (2025-10-15) (PS)
-----------------------
Features:
- PS: Added support for Mollie payment fees.


8.6.3 (2025-10-14) (OC)
-----------------------
Bugs:
- OC3: Our own autoLoader is still needed.
- OC3(|OC4?): TypeError: Siel\Acumulus\Shop\InvoiceManager::getSourceByIdOrSource():
  Argument #2 ($idOrSource) must be of type object|array|int, string given.

Refactorings:
- ALL: Error handling: throw an AcumulusException when a JsonException is thrown.


8.6.2 (2025-10-14) (OC)
-----------------------
Refactorings:
- typos, docu, code inspections.


8.6.1 (2025-10-09) (PS)
-----------------------
Features:
- PS: Support for PrestaShop 9.

Bugs:
- ALL: Link to the documentation on invoice types has been updated (in help texts and
  code documentation).
- PS: PS truncates password fields to 16 characters leading to unwanted password changes
  when submitting the settings form.


8.6.0 (2025-08-28) (MA|WC)
--------------------------
Features:
- ALL: Added support for the API field "warehousecountry": a mapping, an accompanying UI,
  and adapted logic to determine the vat type.

Bugs:
- ALL: MappingsForm contained a lot of incorrect field names when validating a form
  submission, and some packing slip fields were missing completely.
- ALL: TypeError: Container::getCompletor(): Return value must be of type