@@ -14,6 +14,8 @@ Bugs:
 - ALL: Completors should complete not overwrite values already set.
 - JOO|WP: CMS version not mentioned in <connector> tag in messages to the Acumulus API.
 - JOO: Mails were not sent as HTML mails but as text mails with HTML tags.
+- PS: TypeError: LineCollector::addVatRateLookupMetadata(): Argument #2 ($addressId) must
+  be of type int, string given, called in ItemLineCollector.php on line 90 and ...
 
 Refactorings:
 - ALL: Generalise class totals towards a class Amount (split into part amount and part
